GNOME Bugzilla – Bug 796240
gst-validate-1.0 ignores errors in pipeline element parameters
Last modified: 2018-05-18 15:55:11 UTC
When calling gst-launch-1.0 with a wrong parameter (have a look for abc=456): # gst-launch-1.0 v4l2src device=/dev/v4l/by-path/platform-capture-subsystem-video-index4 io-mode=dmabuf abc=456 ! video/x-raw,format=NV12,width=1920,height=1080,framerate=50000/1000 ! fakesink silent=false then I get a warning WARNING: erroneous pipeline: no property "abc" in element "v4l2src0" and execution is aborted. Doing the same with # gst-validate-1.0 --set-scenario testpauselang v4l2src device=/dev/v4l/by-path/platform-capture-subsystem-video-index4 io-mode=dmabuf abc=456 ! video/x-raw,format=NV12,width=1920,height=1080,framerate=50000/1000 ! fakesink silent=false the execution just runs without any comment nor notice. No abort of the program. Should not at least a test tool check the validity of the pipeline like gst-launch-1.0 seems to be doing it?
commit 683b19895e2cc12512f83e8557ffc42089291d45 (HEAD -> master, origin/master, origin/HEAD) Author: Thibault Saunier <tsaunier@igalia.com> Date: Fri May 18 11:50:18 2018 -0400 validate: Error out if gst_parse_launch sets an error. https://bugzilla.gnome.org/show_bug.cgi?id=796240