validate: Error out if gst_parse_launch sets an error.

https://bugzilla.gnome.org/show_bug.cgi?id=796240